--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -153,6 +153,7 @@ $this->inlineScript()->appendScript(
             <div class="modal-footer">
 
             </div>
+        </div>
     </div>
 </div>
 
