--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -432,7 +432,7 @@ $this->inlineScript()->appendScript(
             html = '<form id="git-url-form">' +
                 '<div class="form-group">' +
                 '<input type="url" class="form-control" id="git-url" placeholder="put URL to download files here" required="required" pattern="^https:\/\/(?:www\.)?github\.com\/.+$" />' +
-                '<span id="git-url-help" class="help-block small"></span></div>' +
+                '<span id="git-url-help" class="help-block small">e.g. https://github.com/mongodb/mongo/archive/r3.5.2.tar.gz</span></div>' +
                 '<button type="submit" class="btn btn-default btn-sm" id="git-url-submit">Submit</button>' +
                 '</form>';
 
