--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -187,6 +187,7 @@ $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get
                 ?>
 
            <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
+               <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
                <li> <a id="aboutContent" href="#">About </a>   </li>              
                </ul>
