--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -153,8 +153,9 @@
                 package_type: {
                     title: 'package type',
                     width: '10%',
-                    options: { '':'', '1': 'AppImage', '6': 'Snappy', '5': 'Debian', '2': 'Android (apk)', '3': 'OS X compatible','4': 'Windows executable',},
-                    defaultValue: ''
+                    options: { '':'', '1': 'AppImage', ‚7‘: ‚Flatpak‘, '6': 'Snappy', '5': 'Debian', '2': 'Android (apk)', '3': 'OS X compatible','4': 'Windows executable',},
+                    defaultValue: ‚‘,
+		    optionsSorting: ‚text‘
                 },
                 initSearchIndex: {
                     title: '',
