pling-tickets-94 [files dialog] change cancel button to close

--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -414,7 +414,7 @@ $this->inlineScript()->appendScript(
                 <button id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>" title="add an URL here">
                     <?= $this->translate('Add GitHub File') ?>
                 </button>
-                <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Cancel') ?></button>
+                <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Close') ?></button>
             </div>
             <div class="modal-footer">
 
