--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -438,7 +438,7 @@ $categoryPath[] = $valueCatId;
 
                     html = '<form id="git-url-form">' +
                         '<div class="form-group">' +
-                        '<input type="url" class="form-control" id="git-url" placeholder="put URL to GitHub release here" required="required" pattern="^https:\/\/(?:www\.)?github\.com\/.+$">' +
+                        '<input type="url" class="form-control" id="git-url" placeholder="put URL to GitHub release here" required="required" pattern="^https:\/\/(?:(?:(?:www\.)?github)?|(?:raw\.githubusercontent)?)\.com\/.+$">' +
                         '<span id="git-url-help" class="help-block small">e.g. https://github.com/mongodb/mongo/archive/r3.5.2.tar.gz</span></div>' +
                         '<button type="submit" class="btn btn-default btn-sm" id="git-url-submit">Submit</button>' +
                         '</form>';
