--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -79,7 +79,7 @@
                 <button type="button" class="close col-md-1" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body"></div>
-            <div class="modal-footer">
+            <div class="modal-footer hidden">
                 <button type="button" class="btn btn-native" data-dismiss="modal" style="padding: 5px 10px;">Close</button>
             </div>
         </div><!-- /.modal-content -->
