--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -599,8 +599,8 @@ $categoryPath[] = $valueCatId;
                             perpage: 100,
                             page: page,
                             format: 'json',
-                            ignore_status_code: 1,
-                            status: 'all'
+                            ignore_status_code: 0,
+                            status: 'active'
                         },
                         dataType: 'json',
                         success: function (data, textStatus, jqXHR) {
