--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -595,8 +595,8 @@ $this->inlineScript()->appendScript(
                     perpage: 100,
                     page: page,
                     format: 'json',
-                    ignore_status_code: 1,
-                    status: 'all'
+                    ignore_status_code: 0,
+                    status: 'active'
                 },
                 dataType: 'json',
                 success: function (data, textStatus, jqXHR) {
