--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -712,7 +712,14 @@ $categoryPath[] = $valueCatId;
                                     + '<td>' + this.type + '</td>'
                                     + '<td>'
                                     + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                                    + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"7\">Flatpak</option><option value=\"6\">Snappy</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
+                                    + '<option value=\"\"></option>'
+                                    + '<option value=\"2\">Android (APK)</option>'
+                                    + '<option value=\"1\">AppImage</option>'
+                                    + '<option value=\"5\">Debian</option>'
+                                    + '<option value=\"7\">Flatpak</option>'
+                                    + '<option value=\"3\">OS X compatible</option>'
+                                    + '<option value=\"6\">Snappy</option>'
+                                    + '<option value=\"4\">Windows executable</option>'
                                     + '</select>'
                                     + '</td>'
                                     + '<td>' + this.created_timestamp + '</td>'
@@ -957,7 +964,14 @@ $categoryPath[] = $valueCatId;
                                 + '<td>' + data.file.type + '</td>'
                                 + '<td>'
                                 + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                                + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"7\">Flatpak</option><option value=\"6\">Snappy</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
+                                + '<option value=\"\"></option>'
+                                + '<option value=\"2\">Android (APK)</option>'
+                                + '<option value=\"1\">AppImage</option>'
+                                + '<option value=\"5\">Debian</option>'
+                                + '<option value=\"7\">Flatpak</option>'
+                                + '<option value=\"3\">OS X compatible</option>'
+                                + '<option value=\"6\">Snappy</option>'
+                                + '<option value=\"4\">Windows executable</option>'
                                 + '</select>'
                                 + '</td>'
                                 + '<td>' + data.file.created_timestamp + '</td>'
