--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -302,8 +302,14 @@
                                             + '<td>' + this.type + '</td>'
                                             + '<td>'
                                             + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                                            + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"7\">Flatpak</option><option value=\"6\">Snappy</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
-                                            + '</select><span id="file-tag-packagetype'+this.id+'">'
+                                            + '<option value=\"\"></option>'
+                                            + '<option value=\"2\">Android (APK)</option>'
+                                            + '<option value=\"1\">AppImage</option>'
+                                            + '<option value=\"5\">Debian</option>'
+                                            + '<option value=\"7\">Flatpak</option>'
+                                            + '<option value=\"3\">OS X compatible</option>'
+                                            + '<option value=\"6\">Snappy</option>'
+                                            + '<option value=\"4\">Windows executable</option>'                                            + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'   
                                             + '<td>'
                                             + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
@@ -445,26 +451,32 @@
                                             isExternLink = true;
                                          }
 	                                     $pploadCollection.find('table[data-ppload-files] tbody').append(
-	                                         '<tr' + greyText + '>'
-	                                         + '<td>' + downloadLink + '</td>'
-                                             + '<td>' + version + '</td>'
-	                                         + '<td>' + fileDescription + '</td>'
-	                                         + '<td>' + this.type + '</td>'
-                                                 + '<td>'
-                                                 + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                                                 + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"7\">Flatpak</option><option value=\"6\">Snappy</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
-                                                 + '</select><span id="file-tag-packagetype'+this.id+'">'
-                                                 + '</td>'
-	                                         + '<td>'
-	                                         + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
-	                                         + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
-	                                         + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
-	                                         + '</td>'
-	                                         + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + cout_downloads + '</td>'
-	                                         + '<td>' + this.created_timestamp + '</td>'
-	                                         + '<td style="text-align: right">' + humanFileSize(this.size,isExternLink) + '</td>'
-                                             + '<td></td>'
-	                                         + '</tr>'
+	                                        '<tr' + greyText + '>'
+	                                        + '<td>' + downloadLink + '</td>'
+                                                + '<td>' + version + '</td>'
+	                                        + '<td>' + fileDescription + '</td>'
+	                                        + '<td>' + this.type + '</td>'
+                                                + '<td>'
+                                                + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
+                                                + '<option value=\"\"></option>'
+                                                + '<option value=\"2\">Android (APK)</option>'
+                                                + '<option value=\"1\">AppImage</option>'
+                                                + '<option value=\"5\">Debian</option>'
+                                                + '<option value=\"7\">Flatpak</option>'
+                                                + '<option value=\"3\">OS X compatible</option>'
+                                                + '<option value=\"6\">Snappy</option>'
+                                                + '<option value=\"4\">Windows executable</option>'                                                 + '</select><span id="file-tag-packagetype'+this.id+'">'
+                                                + '</td>'
+	                                        + '<td>'
+	                                        + '<select id="data-select-license' + this.id + '" data-license-id=" name="license">'
+	                                        + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
+	                                        + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
+	                                        + '</td>'
+	                                        + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + cout_downloads + '</td>'
+	                                        + '<td>' + this.created_timestamp + '</td>'
+	                                        + '<td style="text-align: right">' + humanFileSize(this.size,isExternLink) + '</td>'
+                                                + '<td></td>'
+	                                        + '</tr>'
 	                                     );
 
 	                                     if ((typeof osId != 'undefined') && (osId != "")) {
