Fix download link

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -359,8 +359,8 @@
 
 
                                         if (isExternLink) {
-                                            $("#data-link" + this.id).attr('href', decodeURIComponent(link));
-                                        $("#data-link" + this.id).attr('target','_blank');
+                                            //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
+                                            $("#data-link" + this.id).attr('target','_blank');
                                             $("#data-link" + this.id).html($("#data-link" + this.id).html() + " (External Link)");
                                         }
 
@@ -514,7 +514,7 @@
 	                                     $("#data-select-packagetype" + this.id).hide();
 
 	                                     if (isExternLink) {
-	                                         $("#data-link" + this.id).attr('href', decodeURIComponent(link));
+	                                         //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
                                              $("#data-link" + this.id).attr('target','_blank');
 	                                         $("#data-link" + this.id).html($("#data-link" + this.id).html() + " (External Link)");
 	                                     }
