--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -807,7 +807,7 @@ $this->inlineScript()->appendScript(
                         });
 
                         if ((typeof link != 'undefined') && (link != "")) {
-                            $("#data-link" + this.id).attr('href', decodeURIComponent(link));
+                            //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
                             $("#data-link" + this.id).attr('target','_blank');
                             $("#data-link" + this.id).html($("#data-link" + this.id).html() + " (External Link)");
                         }
