--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -801,7 +801,7 @@ $categoryPath[] = $valueCatId;
                                 });
 
                                 if ((typeof link != 'undefined') && (link != "")) {
-                                    $("#data-link" + this.id).attr('href', decodeURIComponent(link));
+                                    //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
                                     $("#data-link" + this.id).attr('target','_blank');
                                     $("#data-link" + this.id).html($("#data-link" + this.id).html() + " (External Link)");
                                 }
