login with github activated

--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -46,7 +46,7 @@ $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 
                 <div id="social-login-elements">
                   <div class="register-facebook">
-                    <p class="small">Login</p>
+                    <p class="small center light greylight">Login</p>
                     <a  href="/login/github/" class="btn btn-block btn-social btn-github">
                       <span class="fa fa-github"></span>
                       with Github
