add package_type in frontpage pling.com

--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -33,6 +33,13 @@
             </span>
         </a><br>
         <?=$this->fetchCategoriesForProductAsString($this->product['project_id'])?> 
+        <?php 
+          $helperPackageTypes = new Default_View_Helper_FetchProjectPackageTypes();
+          $type = $helperPackageTypes->FetchProjectPackageTypes($this->product['project_id']);
+          if(!empty($type)){
+            ?>
+                <?=$type ?>
+        <?php } ?>
         <br>
         <?php
             $count_plingers = $this->product['count_plingers'];
