--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -31,16 +31,18 @@
         <a href="<?=$this->buildProductUrl($this->product['project_id'],'')?>"><?=$this->product['title']?>
             <span class="version"><?=$this->product['version']?>
             </span>
-        </a><br>
-        <?=$this->fetchCategoriesForProductAsString($this->product['project_id'])?> 
+        </a>
+        <span style="display: block; margin-bottom: 5px"><?=$this->fetchCategoriesForProductAsString($this->product['project_id'])?></span>
+        
         <?php 
           $helperPackageTypes = new Default_View_Helper_FetchProjectPackageTypes();
           $type = $helperPackageTypes->FetchProjectPackageTypes($this->product['project_id']);
           if(!empty($type)){
             ?>
-                <?=$type ?>
+            <?=$type ?>
         <?php } ?>
-        <br>
+        <div class="productInfo">
+               
         <?php
             $count_plingers = $this->product['count_plingers'];
             $count_comments = $this->product['count_comments'];
@@ -49,6 +51,7 @@
             echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
             
         ?>
+        </div>
  </div>
  <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4">
     <div class="rating">
